Implemented BLE_DotNet with OOP design. Saved the original in Program_Backup for reference.

--- a/C#/Multiproject/BLE_DotNet/BLE_DotNet.csproj
+++ b/C#/Multiproject/BLE_DotNet/BLE_DotNet.csproj
@@ -48,6 +48,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CSensor.cs" />
+    <Compile Include="CSensorCharacteristic.cs" />
+    <Compile Include="CSensorService.cs" />
+    <Compile Include="Program_Backup.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
