Feature: Implemented Threading to combat issues with characteristic limits but it failed.

--- a/C#/Multiproject/BLE_DotNet/BLE_DotNet.csproj
+++ b/C#/Multiproject/BLE_DotNet/BLE_DotNet.csproj
@@ -48,6 +48,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CClientThread.cs" />
     <Compile Include="CSensor.cs" />
     <Compile Include="CSensorCharacteristic.cs" />
     <Compile Include="CSensorService.cs" />
